objects/Route__c.object
<CustomObject>
    <fields>
        <fullName>Next_Execution_Date__c</fullName>
        <description>The next calculated collection date.</description>
        <inlineHelpText>Override the next calculated collection date if necessary.</inlineHelpText>
        <label>Next Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Scheduled_Date__c</fullName>
        <description>This field is used to store the previous collection date.</description>
        <inlineHelpText>Please enter the previous collection date.</inlineHelpText>
        <label>Previous Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Route_Description__c</fullName>
        <description>The description of the Route.</description>
        <inlineHelpText>Please enter a description of the Route.</inlineHelpText>
        <label>Route Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Day__c</fullName>
        <description>Indicates which day of the week the schedule should default to.</description>
        <inlineHelpText>Please indicate which day of the week the schedule should default to.</inlineHelpText>
        <label>Schedule Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schedule_URL__c</fullName>
        <description>A URL linking to the route schedule (could be a web page or a PDF).</description>
        <inlineHelpText>Please supply a URL linking to the route schedule (could be a web page or a PDF).</inlineHelpText>
        <label>Schedule URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Second_Execution_Date__c</fullName>
        <description>The next after next calculated collection date.</description>
        <inlineHelpText>Override the next after next calculated collection date if necessary.</inlineHelpText>
        <label>Second Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type_of_Round__c</fullName>
        <description>A description of the type of round this Route covers.</description>
        <inlineHelpText>Please enter a description of the type of round this Route covers.</inlineHelpText>
        <label>Type of Round</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Landfill</fullName>
                </value>
                <value>
                    <fullName>Recycling</fullName>
                </value>
                <value>
                    <fullName>Garden</fullName>
                </value>
                <value>
                    <fullName>Food</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Waste Route</description>
    <label>Route</label>
    <nameField>
        <label>Route Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Routes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Previous_Scheduled_Date__c</columns>
        <columns>Next_Execution_Date__c</columns>
        <columns>Second_Execution_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>